--- a/#src/pug/layout/header.pug
+++ b/#src/pug/layout/header.pug
@@ -8,7 +8,8 @@
 					+iconfont('arrow-left')
 					+iconfont('arrow-right')
 				._items-search
-					|🔎 Portfolio
+					+iconfont('tree-branches') 
+					span Portfolio
 	._menu 
 		._menu-column 
 			._name Александр Васильев 
