--- a/#src/pug/partials/section-hello.pug
+++ b/#src/pug/partials/section-hello.pug
@@ -1,35 +1,37 @@
 .hello-page
 	._column 
 		._row
-			._privet 
-				p Всем Привет!
-				p Меня зовут:
-			h1._my-name
-				span A
-				span л
-				span е
-				span к 
-				span с
-				span а 
-				span н 
-				span д 
-				span р
-				div
-				span В
-				span а
-				span с
-				span и 
-				span л
-				span ь 
-				span е 
-				span в 
-			._title.
-				Я > Front-end разработчик
+			._header
+				._privet 
+					p Всем Привет!
+					p Меня зовут:
+				h1._my-name
+					span A
+					span л
+					span е
+					span к 
+					span с
+					span а 
+					span н 
+					span д 
+					span р
+					div
+					span В
+					span а
+					span с
+					span и 
+					span л
+					span ь 
+					span е 
+					span в 
+				._title.
+					Я > Front-end разработчик
 			._text 
 				p /* В данный момент являюсь частным предпринимателем, но хотел бы координально поменять свой род деятельности. */
 				p /* С момента появления 
 					span Интернета 
 					| занимаюсь версткой на уровне сильного увлечения. Я хочу взять на себя больше работы и повысить свои навыки веб-разработчика. */
+
 			._footer
 				._link 
 					span const 
