--- a/#src/pug/partials/section-scills.pug
+++ b/#src/pug/partials/section-scills.pug
@@ -1,6 +1,140 @@
 section.scills-page
 	._column 
-		h1._title Секция умений
-			+svg('phone', 'green')
-			//- img.image(src="./img/svg/sprite.svg" alt="image")
+		include ../modules/breadcrumbs.pug
+		._row 
+			h1._title HTML-верстальщик
+			p._text 
+				span Специализация:
+				| — Программист, разработчик
+			p._text 
+				span Занятость: 
+				| полная занятость
+			p._text 
+				span График работы: 
+				| полный день, удаленная работа
+		._row
+			h1._title Skills 
+			p Меня вдохновляет создание замечательной работы с людьми, которые так же, как и я, увлечены созданием чего-то потрясающего.
+			h1._title Web Development 
+			p._text Javascript,  Node.js, WebStorm. VsCode.
+			h1._title UI\UX Design 
+			p Photoshop, Illustrator, Figma, GitHub, Versal, Marsy .
+			h1._title Frontend Development
+			p HTML, PUG, CSS, LESS, SASS.
+			h1._title Опыт (Experience):
+			p Я сотрудничаю со стартапами, организациями и компаниями из списка Fortune 500 в создании цифровых продуктов, которые помогают клиентам преодолевать трудности и создавать прочные связи с миллионами людей каждый день.
+			p Я сотрудничаю со стартапами, организациями и компаниями из списка Fortune 500 в создании цифровых продуктов, которые помогают клиентам преодолевать трудности и создавать прочные связи с миллионами людей каждый день.
+			p Я сотрудничаю со стартапами, организациями и компаниями из списка Fortune 500 в создании цифровых продуктов, которые помогают клиентам преодолевать трудности и создавать прочные связи с миллионами людей каждый день.
+			p Я сотрудничаю со стартапами, организациями и компаниями из списка Fortune 500 в создании цифровых продуктов, которые помогают клиентам преодолевать трудности и создавать прочные связи с миллионами людей каждый день.
 	._column 
+		._row
+			._header
+				article  
+					h1._title Васильев Александр Геннадиевич
+					p._text 53 года, родился 19 января 1971
+					p._text 
+						span +7 (985) 2605079
+					p._text 
+						span awdes@yandex.ru — 
+						| предпочитаемый способ связи
+					p._text 
+						span Место жительства: 
+						| Обнинск
+					p._text 
+						span Гражданство: 
+						| Россия
+				._image 
+					img(src="img/main/DSCN010.png", alt="myFoto") 
+		._row
+			._content 
+				h1._title Образование (Education):
+				p._text 
+					span Kамчатский государственный технический университет,
+					| Петропавловск-Камчатский 
+					| Судомеханическое отделение, Судомеханик
+				
+		._row
+			h1._title Опыт (Experience):
+			table.table 
+				tbody 
+					tr 
+						td 
+							| Февраль 2017 —
+							| Март 2019 
+						td 
+							span AО «РЭЙТЭ МИРАБИЛЕ ГЛОБАЛ»
+							h3 Инженер по комплектации оборудования
+							| Приемка и проверка соответствия качества оборудования.
+					tr 
+						td 
+							| Ноябрь 2016 —
+							| Февраль 2017
+						td 
+							span ООО "Русский металл"
+							h3 Оператор станка с ЧПУ.
+							| Настройка и эксплуатация оборудования.
+					tr 
+						td 
+							| Октябрь 2004 —
+							| Январь 2006
+						td 
+							span ООО "Аквапласт"
+							h3 Помощник директора по экономике и финансам.
+							| Контроль финансовой и бухгалтерской отчетности. 
+					tr 
+						td 
+							| Август 2000 —
+							| Декабрь 2001
+						td 
+							span ЗАО "Ресурс-Эффект"
+							h3 Главный бухгалтер
+							| ФБухгалтерский учет.
+					tr 
+						td 
+							| Июль 1999 —
+							| Ноябрь 1999
+						td 
+							span OAO «ФПГ СОЮЗПРОМТРАНС»
+							h3 Финансовый менеджер
+							| Помощник директора по экономике и финансам.
+							| Контроль финансовой и бухгалтерской отчетности. 
+					tr 
+						td 
+							| Октябрь 1997 —
+							| Июнь 1999
+						td 
+							span ООО "ФЭРИ"
+							h3 Генеральный директор
+							| Управление компанией.
+					tr 
+						td 
+							| Октябрь 1995 —
+							| Октябрь 1997
+						td 
+							span ООО "Дубрава"
+							h3 Заместитель генерального директора
+							| Управление компанией.
+					tr 
+						td 
+							| Июнь 1994 —
+							| Апрель 1995
+						td 
+							span ГОСУДАРСТВЕННОЕ ПРЕДПРИЯТИЕ ФИРМА «КАМЧАТПИЩЕПРОМ»
+							h3 Помощник руководителя
+							| Автоматизация бухгалтерского учета. Сопровождение бухгалтерской отчетности. Внедрение 1с бухгалтерии.
+					tr 
+						td 
+							| Август 1992 —
+							| Апрель 1994
+						td 
+							span КМП - Камчатское морское пароходство
+							h3 Судомеханик
+							| Эксплуатация судовых энергетических установок.
+					tr 
+						td 
+							| Декабрь 1990 —
+							| Июль 1992
+						td 
+							span БТФ КМП
+							h3 Судомеханик
+							| Эксплуатация судовых энергетических установок.
