--- a/#src/scss/section/section-scills.scss
+++ b/#src/scss/section/section-scills.scss
@@ -1,29 +1,164 @@
 .scills-page {
-	display: flex;
+	transform: rotate(-180deg);
+	width: 100%;
 	height: 100%;
+	display: grid;
+	grid-template-rows: 100%;
+	grid-template-columns: 1fr 1fr;
 
-	// .scills-page __column
-	&__column {
-		// margin: 0 1rem;
-		// height: 100%;
-		// flex: 0 1 50%;
-		// display: grid;
-		// justify-content: center;
-		// align-content: center;
+	overflow-x: hidden;
+	&::-webkit-scrollbar {
+		width: 0;
 	}
 
-	// .scills-page __title
-	&__title {
-		color: #88c0ff;
-		height: 0;
-		font-size: 3rem;
+	scrollbar-width: none;
 
-		span {
-			display: inline-block;
-			opacity: 0;
+	@include _min-690 {
+		max-height: 63.6rem;
+	}
+
+	@include _690 {
+		grid-template-columns: 1fr;
+		grid-template-rows: 1fr 1fr;
+		gap: 0;
+	}
+
+	// .scills-page__column
+	&__column {
+		cursor: row-resize;
+		display: grid;
+		grid-template-rows: auto 1fr;
+		width: 100%;
+		padding-bottom: 2rem;
+		height: 100%;
+		border-right: 1px solid var(--border-color);
+
+		@include _min-690 {
+			min-height: 100%;
+			overflow-x: hidden;
 		}
-		div {
+
+		&:nth-child(1) {
+			align-items: center;
+		}
+
+		&::-webkit-scrollbar {
+			width: 0;
+		}
+
+		scrollbar-width: none;
+	}
+
+	// .scills-page__row
+	&__row {
+		width: 100%;
+		margin: 0 auto;
+		max-width: 50rem;
+		display: flex;
+		flex-direction: column;
+		padding: 1rem 2rem;
+		z-index: 3;
+		border-block: 1px solid var(--font-color-not-active);
+		writing-mode: horizontal-tb;
+		border-top: none;
+	}
+
+	// .scills-page__header
+	&__header {
+		margin-bottom: 2rem;
+		gap: 2rem;
+		@include flex-align-center;
+		@include _490 {
+			flex-direction: column-reverse;
+		}
+	}
+
+	// .scills-page__title
+	&__title {
+		color: var(--font-color-title);
+		font-size: 2.4rem;
+		margin: 1rem 0 0.5rem;
+		font-size: 2.4rem;
+	}
+
+	// .scills-page__text
+	&__text {
+		line-height: 150%;
+		letter-spacing: 1.2px;
+		line-height: 150%;
+		letter-spacing: 1.2px;
+		margin-bottom: 1rem;
+		font-size: 1.2rem;
+		span {
+			color: var(--font-color-not-active);
+		}
+	}
+
+	// .scills-page__image
+	&__image {
+		@include flex-align-center-justify-center;
+		position: relative;
+		flex: 0 0 15rem;
+		height: 15rem;
+		align-self: start;
+
+		&::after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 15rem;
+			height: 15rem;
+			border-radius: 15rem;
+			background: #08183091;
+		}
+
+		img {
+			width: 15rem;
+			height: 15rem;
+			max-width: 15rem;
+			border-radius: 15rem;
+			object-fit: cover;
+		}
+		@include _490 {
+			align-self: center;
+		}
+	}
+
+	// .scills-page__content
+	&__content {
+		border-width: 50%;
+	}
+}
+
+.table {
+	border-collapse: collapse;
+	width: 100%;
+	tr {
+		&:not(:last-child) {
+			border-bottom: 1px solid var(--border-color);
+		}
+	}
+	td {
+		font-size: 1.2rem;
+		span {
 			display: block;
+			color: var(--font-color-title);
+			font-size: 1.6rem;
+		}
+		h3 {
+			color: var(--font-color-title);
+			font-size: 1.4rem;
+			margin-bottom: 0.5rem;
+		}
+		&:nth-child(1) {
+			width: 30%;
+			padding-right: 2rem;
+			color: var(--font-color-second);
+		}
+		&:nth-child(2) {
+			padding: 2rem;
+			width: 70%;
 		}
 	}
 }
