--- a/#src/scss/core/_extend.scss
+++ b/#src/scss/core/_extend.scss
@@ -1,6 +1,10 @@
 .grad_underline {
 	background: linear-gradient(to left, transparent, transparent),
-		linear-gradient(to left, $background-selected, $blue-light);
+		linear-gradient(
+			to left,
+			var(--background-selected),
+			var(--font-color-active)
+		);
 	background-size:
 		100% 1px,
 		0 1px;
@@ -27,7 +31,7 @@
 }
 
 .icon-style {
-	border: 1px $border-color;
+	border: 1px var(--border-color);
 	border-style: none solid;
 	height: 100%;
 	padding: 0 1.5rem;
