--- a/#src/scss/core/_modifiers.scss
+++ b/#src/scss/core/_modifiers.scss
@@ -7,7 +7,7 @@
 	[data-tooltip]::after {
 		content: attr(data-tooltip);
 		border-radius: 0.6rem;
-		border: 1px solid $border-color;
+		border: 1px solid var(--border-color);
 		background-color: #23343bde;
 		position: absolute;
 		padding: 1.2rem;
@@ -29,7 +29,7 @@
 	[data-tooltip]::before {
 		content: '';
 		border: 9px solid transparent;
-		border-right: 9px solid $blue-light;
+		border-right: 9px solid var(--font-color-active);
 		position: absolute;
 		z-index: 9;
 		// left: 110%;
