--- a/#src/scss/core/_variables.scss
+++ b/#src/scss/core/_variables.scss
@@ -14,39 +14,23 @@ $font-family-secondary: 'Roboto Slab', sans-serif;
 $font-weight-defoult: 470;
 $font-size-defoult: 1.4rem;
 //* ----------------------------- [Font Color] ---------------------------------
-$font-body-color: #b2d6ff;
-$font-comment-collor: #626c9e;
-$font-color-title: #4d5bce;
+// $font-body-color: #b2d6ff;
+// $font-body-color: #707bb4;
+// $font-comment-collor: #707bb4;
+// $font-color-title: #4d5bce;
+//* ----------------------------------------------------------------------------
+// $font-color-title: #a8a7da;
 $font-color-var-name: #77faff;
 $font-color-var: #cd6dfa;
 $font-color-other-var: #e99287;
-//* ---------------------------- [DackgroundColor] -----------------------------
-$background: #191b27;
-$background-selected: #2b2d4156;
-$background-active-bar: #1e202e;
-$background-side-bar: #191b27;
-$background-thumb: #16161e;
-$background-color-title: #0e0e13;
-$background-editor: #22222e;
-$background-terminal: #16161e;
-$background-sidebar: #191b27;
 //* -------------------------------- [Color] -----------------------------------
 $gray: #999999;
-$themes-color: #0b486b;
-$text-color: #000000;
-$selected-color: #71cbff;
-$blue-light-not-active: #8bb0ff6c;
-//* ---------------------------- [Other colors] --------------------------------
-
-$blue-light: #7796f3;
-$second-color: #002f5a;
-$colorSideText: #9bceb4;
 $yellow: #ecc673ee;
 $orange: #f67438;
+$second-color: #002f5a;
 $darkcyan: darkcyan;
-// -----------------------------------------------------------------------------
-$border-color: #3c548d49;
-$background-transparent: #0e0e13da;
+$text-color: #000000;
+//* ---------------------------- [Other colors] --------------------------------
 // -----------------------------------------------------------------------------
 $boxShadow: #000;
 $boxShadowSecond: #000;
@@ -57,10 +41,31 @@ $BlackShadow: #091116;
 $text-title: #8ff2ff;
 $text-selection: #0054633f;
 $text-color-selection: #9b9999;
-$scrollbar-thumb-bgcolor: #07325a8a;
 
 // -----------------------------------------------------------------------------
 :root {
+	--font-body-color: #707bb4;
+	--font-color-second: #4d5bce;
+	--font-color-title: #a8a7da;
+	--font-color-active: #7796f3;
+	--font-color-not-active: #8bb0ff6c;
+	//* ---------------------------- [Background] --------------------------------
+	--background-color: #191b27;
+	--background-editor: #22222e;
+	--background-selected: #2b2d4156;
+	--background-terminal: #16161e;
+	--background-side-bar: #191b27;
+	--background-active-bar: #1e202e;
+	--background-color-title: #0e0e13;
+	--background-transparent: #0e0e13da;
+	//* ---------------------------- [Scrollbar] ---------------------------------
+	--selected-color: #71cbff;
+	--themes-color: #0b486b;
+	--background-thumb: #16161e;
+	--scrollbar-thumb-bgcolor: #07325a8a;
+	//* -------------------------- [Other colors] --------------------------------
+	--border-color: #3c548d49;
+
 	// ---------------------------------------------------------------------------
 	--pos: left center;
 	--size: 0;
