--- a/#src/scss/layout/header.scss
+++ b/#src/scss/layout/header.scss
@@ -36,16 +36,26 @@
 
 	// .header-menu__items-search
 	&__items-search {
-		text-align: center;
 		font-size: 1.4rem;
 		height: 100%;
 		width: 28rem;
-		border: 1px solid $border-color;
+		border: 1px solid var(--border-colo);
 		border-radius: 0.5rem;
-		background: $background-selected;
-		color: $font-comment-collor;
+		background: var(--background-selected);
+		color: var(--font-body-color);
+
+		span {
+			line-height: 157.142857%; /* 2.2rem/1.4 */
+		}
+
+		@include flex-align-center-justify-center;
+
 		@include _375 {
 			width: 25rem;
+		}
+
+		.icon-tree-branches {
+			margin-right: 1rem;
 		}
 	}
 }
@@ -55,8 +65,8 @@
 	&__header {
 		display: grid;
 		grid-template-columns: 4rem 1fr;
-		border-bottom: 1px solid $border-color;
-		background: $background-color-title;
+		border-bottom: 1px solid var(--border-color);
+		background: var(--background-color-title);
 	}
 
 	// .header-content__menu
@@ -65,8 +75,8 @@
 		grid-template-columns: max-content 1fr max-content;
 		white-space: nowrap;
 		letter-spacing: 1.2px;
-		color: $blue-light;
-		background: $background-thumb;
+		color: var(--font-color-active);
+		background: var(--background-terminal);
 
 		@include _690 {
 			grid-template-columns: max-content 1fr max-content max-content;
@@ -82,7 +92,7 @@
 		justify-items: flex-start;
 
 		&:nth-child(2) {
-			border: 1px $border-color;
+			border: 1px var(--border-color);
 			border-style: none solid;
 			@include _690 {
 				display: none;
@@ -92,7 +102,7 @@
 		&:nth-child(3) {
 			display: none;
 			@include _690 {
-				border: 1px solid $border-color;
+				border: 1px solid var(--border-color);
 				border-style: none solid;
 				display: block;
 				font-size: 2.4rem;
@@ -116,7 +126,7 @@
 	// .header-content__item-btn--terminal
 	&__item-btn--terminal {
 		position: relative;
-		color: $blue-light-not-active;
+		color: var(--font-color-not-active);
 		min-width: 6rem;
 		width: 100%;
 
@@ -124,7 +134,7 @@
 			width: 6rem;
 
 			&::before {
-				background: $background-thumb;
+				background: var(--background-terminal);
 				min-width: 6rem;
 				width: 6rem;
 				height: 4rem;
@@ -137,13 +147,13 @@
 			.icon-terminal {
 				border-radius: 3px;
 				background: #000;
-				color: $blue-light;
+				color: var(--font-color-active);
 
 				&::before {
 					scale: -1.1;
 					position: absolute;
 					box-shadow: 0px 0px 4px 1px $boxShadow;
-					border: 1px solid $border-color;
+					border: 1px solid var(--border-color);
 					border-radius: 3px;
 					transform: translateY(-3px);
 				}
@@ -162,7 +172,7 @@
 		padding: 0 2rem;
 
 		&:active {
-			color: $blue-light-not-active;
+			color: var(--font-color-not-active);
 		}
 
 		@include _490 {
@@ -202,7 +212,7 @@
 			top: 0;
 
 			font-size: 2.6rem;
-			color: $blue-light-not-active;
+			color: var(--font-color-not-active);
 			@include _min-490 {
 				display: none;
 			}
@@ -219,8 +229,8 @@
 		@include flex-align-center;
 
 		@include _690 {
-			border: 1px solid $border-color;
-			background: $background-active-bar;
+			border: 1px solid var(--border-color);
+			background: var(--background-active-bar);
 			border-radius: 0.5rem;
 			flex-direction: column;
 			align-items: start;
@@ -234,12 +244,12 @@
 		width: 100%;
 		cursor: pointer;
 		padding: 0 2rem;
-		color: $blue-light-not-active;
+		color: var(--font-color-not-active);
 
 		&:hover {
-			color: $blue-light;
+			color: var(--font-color-active);
 			.folder-directory {
-				fill: $blue-light;
+				fill: var(--font-color-active);
 			}
 		}
 
@@ -250,7 +260,7 @@
 
 		@include _690 {
 			height: 4rem;
-			border-bottom: 1px solid $border-color;
+			border-bottom: 1px solid var(--border-color);
 
 			&:not(:last-child) {
 				margin-bottom: 1rem;
@@ -266,7 +276,7 @@
 				calc(100% - 0px) 1px;
 
 			@include _min-690 {
-				color: $blue-light;
+				color: var(--font-color-active);
 
 				&::after {
 					position: absolute;
@@ -274,13 +284,13 @@
 					content: '';
 					width: 100%;
 					height: 100%;
-					background: $background-selected;
+					background: var(--background-selected);
 				}
 			}
 
 			.folder-open-directory {
 				display: block;
-				fill: $blue-light;
+				fill: var(--font-color-active);
 			}
 
 			.folder-directory {
@@ -290,7 +300,7 @@
 
 		@include _min-690 {
 			&:not(:last-child) {
-				border-right: 1px solid $border-color;
+				border-right: 1px solid var(--border-color);
 			}
 		}
 
@@ -310,7 +320,7 @@
 		margin-right: 1rem;
 		width: 3.5rem;
 		height: 2.5rem;
-		fill: $blue-light-not-active;
+		fill: var(--font-color-not-active);
 
 		@include _690 {
 			width: 2rem;
@@ -327,7 +337,7 @@
 
 	// .burger-bottom__items
 	&__items {
-		border: 1px $border-color;
+		border: 1px var(--border-color);
 		border-style: none solid;
 	}
 }
