--- a/#src/scss/section/section-hello.scss
+++ b/#src/scss/section/section-hello.scss
@@ -6,6 +6,10 @@
 	gap: 3rem;
 	grid-template-columns: 1fr 6rem 1fr;
 
+	@include _min-690 {
+		max-height: 63.6rem;
+	}
+
 	@include _690 {
 		grid-template-columns: 1fr;
 		grid-template-rows: 100%;
@@ -14,12 +18,13 @@
 
 	// .hello-page__column
 	&__column {
+		height: 100%;
 		display: flex;
 		flex-wrap: wrap;
 		min-height: 100%;
+		overflow-x: hidden;
 
 		&:nth-child(1) {
-			height: 100%;
 			justify-content: end;
 			padding: 2.5rem 0;
 			justify-content: center;
@@ -30,11 +35,11 @@
 		}
 
 		&:nth-child(2) {
-			border: 1px $border-color;
+			border: 1px var(--border-color);
 			border-style: none solid;
 			justify-content: center;
 			z-index: 4;
-			background-color: $background-active-bar;
+			background-color: var(--background-active-bar);
 
 			@include _690 {
 				grid-column: -2 / -1;
@@ -48,10 +53,12 @@
 		&:nth-child(3) {
 			position: relative;
 			z-index: 3;
+
 			@include _min-690 {
 				overflow: hidden;
 				justify-content: flex-start;
 				align-content: center;
+
 				.hello-page__row {
 					min-height: 125%;
 				}
@@ -67,12 +74,14 @@
 		&::-webkit-scrollbar {
 			width: 0;
 		}
+
+		scrollbar-width: none;
 	}
 
 	//.hello-page__row
 	&__row {
+		margin: 0 2rem;
 		position: relative;
-		height: 100%;
 		display: flex;
 		justify-content: center;
 		flex-direction: column;
@@ -94,6 +103,7 @@
 				flex: 0 1 15%;
 			}
 		}
+
 		@include _320 {
 			p {
 				font-size: 1.4rem;
@@ -108,14 +118,15 @@
 		gap: 1rem;
 		flex-direction: column;
 		align-items: flex-end;
-		color: $blue-light-not-active;
+		color: var(--font-color-not-active);
 		font-weight: 100;
 
 		.swiper-pagination-bullet {
-			text-shadow: #f67438 1px 0 10px;
+			text-shadow: $orange 1px 0 10px;
 			cursor: pointer;
 			position: relative;
 			@include flex-align-center-justify-center;
+
 			&::before {
 				content: '';
 				position: absolute;
@@ -123,14 +134,13 @@
 				height: 20px;
 				border-radius: 50%;
 				background: #00ffff1e;
-				box-shadow: 0px 0px 3px 1px $boxShadow;
 				scale: 0;
 				transition: scale 0.5s ease 0s;
 			}
 		}
 
 		.swiper-pagination-bullet-active {
-			color: $blue-light;
+			color: var(--font-color-active);
 			font-weight: 500;
 
 			&::before {
@@ -144,7 +154,7 @@
 	&__privet {
 		width: 100%;
 		font-size: 1.6rem;
-		color: $font-body-color;
+		color: var(--font-color-title);
 		padding: 2rem 0 0;
 		letter-spacing: 1.2px;
 
@@ -173,7 +183,7 @@
 		padding: 0 0.5rem;
 		border-top: 1px solid #c2eeff15;
 		position: relative;
-		color: $font-body-color;
+		color: var(--font-color-title);
 		font-size: 3rem;
 		white-space: nowrap;
 		line-height: 200%; /* 4rem/2 */
@@ -195,8 +205,8 @@
 	&__title {
 		margin-bottom: 3rem;
 		opacity: 0;
-		color: $font-color-title;
-		font-family: $font-family-secondary;
+		color: var(--font-color-second);
+		font-family: var(--font-color-title);
 		font-size: 2rem;
 		font-weight: 450;
 		line-height: normal;
@@ -206,11 +216,10 @@
 	&__text {
 		text-indent: 1rem;
 		opacity: 0;
-		color: $font-comment-collor;
 		margin-bottom: 2rem;
 		span {
 			font-style: italic;
-			color: $blue-light;
+			color: var(--font-color-active);
 			font-family: 'Fira Code', sans-serif;
 		}
 		p {
