--- a/#src/scss/section/section-swiper.scss
+++ b/#src/scss/section/section-swiper.scss
@@ -8,7 +8,7 @@
 
 	// .mainslide__slide
 	&__slide {
-		opacity: 0.5;
+		opacity: 0.3;
 		display: inline-flex;
 		flex-wrap: wrap;
 		@include flex-justify-center;
@@ -26,11 +26,11 @@
 .content-mainslide {
 	// .content-mainslide__image
 	&__image {
-		border: 1px solid $border-color;
+		border: 1px solid var(--border-color);
 		height: 100px;
 		overflow: hidden;
 		border-radius: 10px;
-		box-shadow: 0 1px 10px #000;
+		box-shadow: 0 1px 10px $boxShadow;
 
 		img {
 			position: relative;
@@ -56,7 +56,7 @@
 	top: 0;
 	width: 100%;
 	height: 100%;
-	background-color: $background-transparent;
+	background-color: var(--background-transparent);
 	opacity: 0;
 
 	// .modal__image
@@ -82,13 +82,13 @@
 		animation-duration: 0.5s;
 		position: fixed;
 		top: 1.5rem;
-		color: $blue-light;
+		color: var(--font-color-active);
 		font-size: 4rem;
 		font-weight: bold;
 
 		&:hover,
 		&:focus {
-			color: $blue-light-not-active;
+			color: var(--font-color-not-active);
 			text-decoration: none;
 			cursor: pointer;
 		}
