--- a/#src/scss/section/side-bar.scss
+++ b/#src/scss/section/side-bar.scss
@@ -4,7 +4,7 @@
 
 	// .side-bar__active-bar
 	&__active-bar {
-		background: $background-active-bar;
+		background: var(--background-active-bar);
 	}
 
 	// .side-bar__6menu
@@ -29,12 +29,12 @@
 	// .menu__parent
 	&__parent {
 		position: absolute;
-		border: 1px solid $border-color;
+		border: 1px solid var(--border-color);
 		width: auto;
 		width: 0;
 		height: 100%;
 		overflow: hidden;
-		background: $background-side-bar;
+		background: var(--background-side-bar);
 		transition: width 0.3s ease-out;
 
 		&._select {
@@ -55,7 +55,7 @@
 		z-index: 9;
 		bottom: -0.5rem;
 		max-width: 30rem;
-		background: $background-color-title;
+		background: var(--background-color-title);
 		box-shadow: 3px 3px 10px #000;
 		border: 1px solid #0000005b;
 		border-radius: 0.4rem;
@@ -68,9 +68,9 @@
 		position: relative;
 		padding: 1.5rem 0;
 		height: 100%;
-		border: 1px solid $blue-light-not-active;
+		border: 1px solid var(--font-color-not-active);
 		border-right-style: none;
-		color: $font-comment-collor;
+		color: var(--font-body-color) #707bb4;
 		font-size: 1.6rem;
 	}
 
@@ -84,7 +84,7 @@
 			grid-template-rows: max-content 1fr;
 
 			.parent-menu__title {
-				color: $blue-light;
+				color: var(--font-color-active);
 			}
 
 			.icon-angles-right-solid {
@@ -110,9 +110,9 @@
 		cursor: pointer;
 		padding-left: 0.8rem;
 		line-height: 170%;
-		background-color: $background-selected;
+		background-color: var(--background-selected);
 		border-radius: 0.3rem;
-		border: 1px solid $border-color;
+		border: 1px solid var(--border-color);
 		border-style: solid none;
 		@include flex-align-center;
 
@@ -133,7 +133,7 @@
 		overflow: hidden;
 		transition: min-height 0.4s ease-in-out;
 		background: linear-gradient(to left, transparent, transparent),
-			linear-gradient(to left, $border-color, $border-color);
+			linear-gradient(to left, var(--border-color), var(--border-color));
 		background-size:
 			100% 1px,
 			0 1px;
@@ -148,7 +148,11 @@
 			height: 100%;
 			position: absolute;
 			top: 0;
-			background: linear-gradient(to bottom, $border-color, $border-color);
+			background: linear-gradient(
+				to bottom,
+				var(--border-color),
+				var(--border-color)
+			);
 			background-position: center;
 			background-size: 1px calc(100% - 0.5rem);
 			background-repeat: no-repeat;
@@ -188,9 +192,9 @@
 		}
 
 		&:hover {
-			color: $blue-light;
-			background: $background-selected;
-			border: 1px solid $border-color;
+			color: var(--font-color-active);
+			background: var(--background-selected);
+			border: 1px solid var(--border-color);
 		}
 	}
 }
@@ -227,7 +231,7 @@
 		overflow: hidden;
 		transition: min-height 0.4s ease-in-out;
 		background: linear-gradient(to left, transparent, transparent),
-			linear-gradient(to left, $border-color, $border-color);
+			linear-gradient(to left, var(--border-color), var(--border-color));
 		background-size:
 			100% 1px,
 			0 1px;
@@ -242,7 +246,11 @@
 			height: 100%;
 			position: absolute;
 			top: 0;
-			background: linear-gradient(to bottom, $border-color, $border-color);
+			background: linear-gradient(
+				to bottom,
+				var(--border-color),
+				var(--border-color)
+			);
 			background-position: center;
 			background-size: 1px calc(100% - 0.5rem);
 			background-repeat: no-repeat;
@@ -278,9 +286,9 @@
 		}
 
 		&:hover {
-			color: $blue-light;
-			background: $background-selected;
-			border: 1px solid $border-color;
+			color: var(--font-color-active);
+			background: var(--background-selected);
+			border: 1px solid var(--border-color);
 		}
 	}
 }
@@ -319,12 +327,12 @@
 		line-height: 178.571429%; /* 2.5/1.4 */
 		border-radius: 0.3rem;
 		padding: 0 2rem;
-		color: $font-comment-collor;
+		color: var(--font-body-color);
 		letter-spacing: 0.7px;
 		@include flex-align-center-justify-space-between;
 
 		&:hover {
-			color: $blue-light;
+			color: var(--font-color-active);
 		}
 
 		.icon-angle-right {
@@ -365,7 +373,7 @@
 
 	li {
 		&:hover {
-			background: $background-sidebar;
+			background: var(--background-side-bar);
 			color: $gray;
 		}
 		padding: 0.2rem;
@@ -395,7 +403,7 @@
 		[class*='icon-'] {
 			margin-right: 0;
 			width: 100%;
-			color: $blue-light-not-active;
+			color: var(--font-color-not-active);
 		}
 
 		span {
@@ -407,10 +415,10 @@
 		}
 
 		&._select {
-			background: $background-selected;
-			border-left: 0.2rem solid $selected-color;
+			background: var(--background-selected);
+			border-left: 0.2rem solid var(--selected-color);
 			span {
-				color: $blue-light;
+				color: var(--font-color-active);
 			}
 		}
 	}
@@ -435,7 +443,7 @@
 	}
 	// .active-bar__items-bottom
 	&__items-bottom {
-		border-top: 1px solid $border-color;
+		border-top: 1px solid var(--border-color);
 	}
 }
 
@@ -454,17 +462,17 @@
 		line-height: 178.571429%; /* 2.5/1.4 */
 		border-radius: 1.3rem;
 		padding: 0 2rem;
-		color: $font-comment-collor;
+		color: var(--font-body-color);
 		letter-spacing: 0.7px;
 		@include flex-align-center-justify-space-between;
 
 		&:hover {
-			color: $blue-light;
+			color: var(--font-color-active);
 		}
 
 		li {
 			&:hover {
-				background: $background-sidebar;
+				background: var(--background-side-bar);
 				color: $gray;
 			}
 			padding: 0.2rem;
