--- a/#src/pug/partials/section-scills.pug
+++ b/#src/pug/partials/section-scills.pug
@@ -1,6 +1,7 @@
-section.scills-page
+.scills-page.el-anime(data-x='170')
 	._column 
 		include ../modules/breadcrumbs.pug
+	._column 
 		._row 
 			h1._title HTML-верстальщик
 			p._text 
@@ -14,26 +15,26 @@ section.scills-page
 				| полный день, удаленная работа
 		._row
 			h1._title Skills 
-			p Меня вдохновляет создание замечательной работы с людьми, которые так же, как и я, увлечены созданием чего-то потрясающего.
+			p Меня вдохновляет создание замечательной работы с людьми, которые так же, как и я, увлечены созданием чего-то потрясающего. 
+			p - Обучаемость. Мой девиз: каждый день что-то новое. 
+			p - Коммуникабельность: способность находить общий язык практически с любым типом людей. 
+			p - Внимание к деталям.
+			p - Способность эффективно взаимодействовать с командой, для достижения общей цели.
 			h1._title Web Development 
-			p._text Javascript,  Node.js, WebStorm. VsCode.
+			p._text Javascript, Node.js, Anime.js, Swiper, WebStorm. VsCode.
 			h1._title UI\UX Design 
 			p Photoshop, Illustrator, Figma, GitHub, Versal, Marsy .
 			h1._title Frontend Development
 			p HTML, PUG, CSS, LESS, SASS.
 			h1._title Опыт (Experience):
-			p Я сотрудничаю со стартапами, организациями и компаниями из списка Fortune 500 в создании цифровых продуктов, которые помогают клиентам преодолевать трудности и создавать прочные связи с миллионами людей каждый день.
-			p Я сотрудничаю со стартапами, организациями и компаниями из списка Fortune 500 в создании цифровых продуктов, которые помогают клиентам преодолевать трудности и создавать прочные связи с миллионами людей каждый день.
-			p Я сотрудничаю со стартапами, организациями и компаниями из списка Fortune 500 в создании цифровых продуктов, которые помогают клиентам преодолевать трудности и создавать прочные связи с миллионами людей каждый день.
-			p Я сотрудничаю со стартапами, организациями и компаниями из списка Fortune 500 в создании цифровых продуктов, которые помогают клиентам преодолевать трудности и создавать прочные связи с миллионами людей каждый день.
+			p Я сотрудничаю со стартапами, организациями и компаниями из списка Fortune 500 в создании цифровых продуктов, которые помогают клиентам преодолевать трудности и создавать прочные связи с миллионами людей каждый день. 
 	._column 
 		._row
 			._header
 				article  
 					h1._title Васильев Александр Геннадиевич
 					p._text 53 года, родился 19 января 1971
-					p._text 
-						span +7 (985) 2605079
+					p._text +7 (985) 2605079
 					p._text 
 						span awdes@yandex.ru — 
 						| предпочитаемый способ связи
@@ -48,10 +49,7 @@ section.scills-page
 		._row
 			._content 
 				h1._title Образование (Education):
-				p._text 
-					span Kамчатский государственный технический университет,
-					| Петропавловск-Камчатский 
-					| Судомеханическое отделение, Судомеханик
+				p._text Kамчатский государственный технический университет, г.Петропавловск-Камчатский. Судомеханическое отделение, Судомеханик
 				
 		._row
 			h1._title Опыт (Experience):
