--- a/#src/scss/core/_extend.scss
+++ b/#src/scss/core/_extend.scss
@@ -27,7 +27,7 @@
 }
 
 .gradient {
-	background: linear-gradient(to right bottom, #000000, #191b27);
+	// background: linear-gradient(to right bottom, #000000, #191b27);
 }
 
 .icon-style {
