--- a/#src/scss/section/section-hello.scss
+++ b/#src/scss/section/section-hello.scss
@@ -1,10 +1,12 @@
 .hello-page {
+	position: relative;
 	width: 100%;
 	height: 100%;
 	display: grid;
 	grid-template-rows: 100%;
 	gap: 3rem;
 	grid-template-columns: 1fr 6rem 1fr;
+	opacity: 1;
 
 	@include _min-690 {
 		max-height: 63.6rem;
