--- a/#src/scss/section/section-scills.scss
+++ b/#src/scss/section/section-scills.scss
@@ -1,51 +1,71 @@
 .scills-page {
-	transform: rotate(-180deg);
+	position: relative;
 	width: 100%;
 	height: 100%;
 	display: grid;
-	grid-template-rows: 100%;
 	grid-template-columns: 1fr 1fr;
-
 	overflow-x: hidden;
+
 	&::-webkit-scrollbar {
 		width: 0;
 	}
 
-	scrollbar-width: none;
-
 	@include _min-690 {
-		max-height: 63.6rem;
+		max-height: 63.2rem;
 	}
 
 	@include _690 {
 		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 1fr;
-		gap: 0;
+		grid-template-rows: min-content 1fr 1fr;
 	}
 
 	// .scills-page__column
 	&__column {
 		cursor: row-resize;
 		display: grid;
-		grid-template-rows: auto 1fr;
-		width: 100%;
-		padding-bottom: 2rem;
-		height: 100%;
 		border-right: 1px solid var(--border-color);
+
+		&:nth-child(1) {
+			background-color: var(--background-active-bar);
+			position: sticky;
+			top: 0;
+			z-index: 4;
+		}
+
+		@include _min-690 {
+			&:not(:first-child) {
+				padding-bottom: 2rem;
+			}
+
+			&:nth-child(1) {
+				grid-column: 1 / 3;
+				align-items: center;
+			}
+		}
+
+		@include _690 {
+			&:nth-child(1) {
+				align-items: center;
+				grid-row: 1 / 2;
+			}
+			&:nth-child(2) {
+				align-items: center;
+				grid-row: 3 / 4;
+			}
+			&:nth-child(3) {
+				align-items: center;
+				grid-row: 2 / 3;
+			}
+		}
 
 		@include _min-690 {
 			min-height: 100%;
 			overflow-x: hidden;
 		}
 
-		&:nth-child(1) {
-			align-items: center;
-		}
-
 		&::-webkit-scrollbar {
 			width: 0;
 		}
-
 		scrollbar-width: none;
 	}
 
@@ -65,9 +85,9 @@
 
 	// .scills-page__header
 	&__header {
-		margin-bottom: 2rem;
 		gap: 2rem;
 		@include flex-align-center;
+
 		@include _490 {
 			flex-direction: column-reverse;
 		}
