--- a/#src/scss/core/_variables.scss
+++ b/#src/scss/core/_variables.scss
@@ -38,13 +38,13 @@ $text-color-selection: #9b9999;
 
 // -----------------------------------------------------------------------------
 :root {
-	// --font-body-color: #7f8dcf;
+	--font-body-color: #7f8dcf;
 	--font-color-second: #4d5bce;
 	--font-color-title: #88c0ff;
 	--font-color-active: #7796f3;
 	--font-color-not-active: #8bb0ff6c;
 	//* ---------------------------- [Background] --------------------------------
-	--background-color: #9ea4c4;
+	--background-color: #191b27;
 	--background-editor: #22222e;
 	--background-selected: #2b2d4156;
 	--background-terminal: #16161e;
