--- a/#src/scss/section/section-scills.scss
+++ b/#src/scss/section/section-scills.scss
@@ -22,9 +22,13 @@
 	// .scills-page__column
 	&__column {
 		cursor: row-resize;
-		display: grid;
-		border-right: 1px solid var(--border-color);
+		display: flex;
+		flex-direction: column;
+		align-items: center;
 
+		&:not(:first-child) {
+			padding: 0 2rem;
+		}
 		&:nth-child(1) {
 			background-color: var(--background-active-bar);
 			position: sticky;
@@ -40,6 +44,9 @@
 			&:nth-child(1) {
 				grid-column: 1 / 3;
 				align-items: center;
+			}
+			&:nth-child(2) {
+				border-right: 1px solid var(--border-color);
 			}
 		}
 
@@ -72,15 +79,17 @@
 	// .scills-page__row
 	&__row {
 		width: 100%;
-		margin: 0 auto;
 		max-width: 50rem;
 		display: flex;
 		flex-direction: column;
-		padding: 1rem 2rem;
+		padding: 1rem 0;
 		z-index: 3;
 		border-block: 1px solid var(--font-color-not-active);
 		writing-mode: horizontal-tb;
 		border-top: none;
+		@include _320 {
+			max-width: 28rem;
+		}
 	}
 
 	// .scills-page__header
